[gd_scene load_steps=34 format=3 uid="uid://q4p7ordokspf"]

[ext_resource type="Script" uid="uid://crjw7s681au33" path="res://Minigames/FoodOrder/Scripts/food_order.gd" id="1_xrv4f"]
[ext_resource type="PackedScene" uid="uid://defw1u3hso2en" path="res://Minigames/General/Scenes/cursor.tscn" id="2_xrv4f"]
[ext_resource type="FontFile" uid="uid://4h8up6o8g8q8" path="res://Minigames/FoodOrder/Assets/potFont.tres" id="3_axrgk"]
[ext_resource type="AudioStream" uid="uid://c71g5oc3c2r42" path="res://Minigames/FoodOrder/Assets/Sounds/Level.wav" id="3_fmox7"]
[ext_resource type="Texture2D" uid="uid://b5o6bbhgb2kjp" path="res://Minigames/FoodOrder/Assets/FoodPNGs/apple.png" id="3_fp22t"]
[ext_resource type="AudioStream" uid="uid://l5jvd64346f5" path="res://Minigames/FoodOrder/Assets/Sounds/mixkit-fish-flapping-2457.wav" id="4_5ousc"]
[ext_resource type="Texture2D" uid="uid://6854bkwo7d8c" path="res://Minigames/FoodOrder/Assets/background.jpg" id="4_fp22t"]
[ext_resource type="Texture2D" uid="uid://djlxrpw7rndjb" path="res://Minigames/FoodOrder/Assets/FoodPNGs/cupcake.png" id="4_gdl3i"]
[ext_resource type="PackedScene" uid="uid://dp1kw05gbpte7" path="res://Minigames/General/Scenes/panels.tscn" id="5_5ousc"]
[ext_resource type="Texture2D" uid="uid://dbc8oqcncg6ov" path="res://Minigames/FoodOrder/Assets/FoodPNGs/burger.png" id="5_axrgk"]
[ext_resource type="Texture2D" uid="uid://gerg3j6q70q5" path="res://Minigames/FoodOrder/Assets/FoodPNGs/cookie.png" id="6_34sat"]
[ext_resource type="Texture2D" uid="uid://clwkj546pe5" path="res://Minigames/FoodOrder/Assets/FoodPNGs/bananna.png" id="7_lfkhu"]
[ext_resource type="Texture2D" uid="uid://bg1v2tm1m3imw" path="res://Minigames/FoodOrder/Assets/FoodPNGs/icecream.png" id="8_j3hxy"]
[ext_resource type="Texture2D" uid="uid://lcion3pq46sj" path="res://Minigames/FoodOrder/Assets/FoodPNGs/meat.png" id="9_8amk4"]
[ext_resource type="Texture2D" uid="uid://dhb7ks5iuvdov" path="res://Minigames/FoodOrder/Assets/FoodPNGs/watermellon.png" id="10_ibn80"]
[ext_resource type="Texture2D" uid="uid://grhmqbk5ttsq" path="res://Minigames/FoodOrder/Assets/FoodPNGs/cake.png" id="11_5e2ug"]
[ext_resource type="Texture2D" uid="uid://b02g1awamitwg" path="res://Minigames/FoodOrder/Assets/FoodPNGs/tomato.png" id="12_psjat"]
[ext_resource type="Texture2D" uid="uid://cjjonqpsxs1sa" path="res://Minigames/FoodOrder/Assets/FoodPNGs/muffin.png" id="13_hkpwe"]
[ext_resource type="Texture2D" uid="uid://dsarwvsx30tga" path="res://Minigames/FoodOrder/Assets/FoodPNGs/ketchup.png" id="14_u75f0"]
[ext_resource type="Texture2D" uid="uid://ckeka4i743i0w" path="res://Minigames/FoodOrder/Assets/FoodPNGs/bacon.png" id="15_2vpjh"]
[ext_resource type="Texture2D" uid="uid://c65s5otyhrhcs" path="res://Minigames/FoodOrder/Assets/FoodPNGs/lemon.png" id="16_ls7tg"]
[ext_resource type="Texture2D" uid="uid://t0av0t43eg1k" path="res://Minigames/FoodOrder/Assets/FoodPNGs/carrot.png" id="17_d0fer"]
[ext_resource type="Texture2D" uid="uid://cl878hov1n6p2" path="res://Minigames/FoodOrder/Assets/FoodPNGs/hotdog.png" id="18_v38al"]
[ext_resource type="Texture2D" uid="uid://cvdxu4gmtsb3d" path="res://Minigames/FoodOrder/Assets/FoodPNGs/mustard.png" id="19_rpg03"]
[ext_resource type="Texture2D" uid="uid://mymgsnnh3o0d" path="res://MiscAssets/Players/Icons/Penguin.png" id="21_34sat"]

[sub_resource type="Animation" id="Animation_lfkhu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Start:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera2D/End/Black:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_34sat"]
resource_name = "start"
length = 4.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Start:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 2.5, 3.5, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera2D/End/Black:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(4.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"new_round"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j3hxy"]
_data = {
&"RESET": SubResource("Animation_lfkhu"),
&"start": SubResource("Animation_34sat")
}

[sub_resource type="Animation" id="Animation_xrv4f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D/End/Black:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera2D/End/Panels/B:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -1080)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Camera2D/End/Panels/R:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(480, 1080)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Camera2D/End/Panels/G:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(960, -1080)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Camera2D/End/Panels/Y:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1440, 1080)]
}

[sub_resource type="Animation" id="Animation_n3vx5"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D/End/Black:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_b4hru"]
resource_name = "slide"
length = 1.1
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"end"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera2D/End/Panels/B:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -1080), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Camera2D/End/Panels/R:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(480, 1080), Vector2(480, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Camera2D/End/Panels/G:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(960, -1080), Vector2(960, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Camera2D/End/Panels/Y:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1440, 1080), Vector2(1440, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n3vx5"]
_data = {
&"RESET": SubResource("Animation_xrv4f"),
&"fade_in": SubResource("Animation_n3vx5"),
&"slide": SubResource("Animation_b4hru")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fp22t"]
size = Vector2(150, 150)

[node name="Food Order" type="Node2D"]
script = ExtResource("1_xrv4f")

[node name="Background" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("4_fp22t")
expand_mode = 1

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_fmox7")
volume_db = -22.0
autoplay = true

[node name="Splash" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_5ousc")
volume_db = -10.0

[node name="AP" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_j3hxy")
}

[node name="GameEnd" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_n3vx5")
}
autoplay = "fade_in"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(960, 540)

[node name="End" type="CanvasLayer" parent="Camera2D"]

[node name="Panels" parent="Camera2D/End" instance=ExtResource("5_5ousc")]

[node name="Black" type="ColorRect" parent="Camera2D/End"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="PotLabel" type="Label" parent="."]
visible = false
offset_left = 636.0
offset_top = 668.0
offset_right = 1306.0
offset_bottom = 877.0
theme_override_colors/font_color = Color(0, 0.402331, 0, 1)
theme_override_fonts/font = ExtResource("3_axrgk")
theme_override_font_sizes/font_size = 100
text = "Sweet"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Label" parent="."]
visible = false
offset_left = 1300.0
offset_top = 550.0
offset_right = 1970.0
offset_bottom = 1071.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 50
theme_override_fonts/font = ExtResource("3_axrgk")
theme_override_font_sizes/font_size = 400
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Items" type="Node2D" parent="."]

[node name="Apple" type="Area2D" parent="Items"]
position = Vector2(150, 64)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Items/Apple"]
position = Vector2(75, 75)
shape = SubResource("RectangleShape2D_fp22t")

[node name="Box" type="Sprite2D" parent="Items/Apple/CollisionShape2D"]

[node name="Sprite2D" type="Sprite2D" parent="Items/Apple"]
position = Vector2(75, 71)
scale = Vector2(0.21, 0.21)
texture = ExtResource("3_fp22t")

[node name="Cupcake" type="Area2D" parent="Items"]
position = Vector2(444, 64)

[node name="Sprite2D" type="Sprite2D" parent="Items/Cupcake"]
position = Vector2(75, 61)
scale = Vector2(0.22, 0.22)
texture = ExtResource("4_gdl3i")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Items/Cupcake"]
position = Vector2(75, 75)
shape = SubResource("RectangleShape2D_fp22t")

[node name="Box" type="Sprite2D" parent="Items/Cupcake/CollisionShape2D"]

[node name="Burger" type="Area2D" parent="Items"]
position = Vector2(738, 64)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Items/Burger"]
position = Vector2(75, 75)
shape = SubResource("RectangleShape2D_fp22t")

[node name="Box" type="Sprite2D" parent="Items/Burger/CollisionShape2D"]

[node name="Sprite2D" type="Sprite2D" parent="Items/Burger"]
position = Vector2(75, 71)
scale = Vector2(0.23, 0.23)
texture = ExtResource("5_axrgk")

[node name="Cookie" type="Area2D" parent="Items"]
position = Vector2(1032, 64)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Items/Cookie"]
position = Vector2(75, 75)
shape = SubResource("RectangleShape2D_fp22t")

[node name="Box" type="Sprite2D" parent="Items/Cookie/CollisionShape2D"]

[node name="Sprite2D" type="Sprite2D" parent="Items/Cookie"]
position = Vector2(75, 75)
scale = Vector2(0.25, 0.25)
texture = ExtResource("6_34sat")

[node name="Bananna" type="Area2D" parent="Items"]
position = Vector2(1326, 64)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Items/Bananna"]
position = Vector2(75, 75)
shape = SubResource("RectangleShape2D_fp22t")

[node name="Box" type="Sprite2D" parent="Items/Bananna/CollisionShape2D"]

[node name="Sprite2D" type="Sprite2D" parent="Items/Bananna"]
position = Vector2(85, 74)
rotation = -0.464823
scale = Vector2(0.3, 0.3)
texture = ExtResource("7_lfkhu")

[node name="Icecream" type="Area2D" parent="Items"]
position = Vector2(1620, 64)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Items/Icecream"]
position = Vector2(75, 75)
shape = SubResource("RectangleShape2D_fp22t")

[node name="Box" type="Sprite2D" parent="Items/Icecream/CollisionShape2D"]

[node name="Sprite2D" type="Sprite2D" parent="Items/Icecream"]
position = Vector2(75, 83)
scale = Vector2(0.23, 0.23)
texture = ExtResource("8_j3hxy")

[node name="Meat" type="Area2D" parent="Items"]
position = Vector2(297, 239)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Items/Meat"]
position = Vector2(75, 75)
shape = SubResource("RectangleShape2D_fp22t")

[node name="Box" type="Sprite2D" parent="Items/Meat/CollisionShape2D"]

[node name="Sprite2D" type="Sprite2D" parent="Items/Meat"]
position = Vector2(75, 77)
scale = Vector2(0.24, 0.24)
texture = ExtResource("9_8amk4")

[node name="Watermellon" type="Area2D" parent="Items"]
position = Vector2(591, 239)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Items/Watermellon"]
position = Vector2(75, 75)
shape = SubResource("RectangleShape2D_fp22t")

[node name="Box" type="Sprite2D" parent="Items/Watermellon/CollisionShape2D"]

[node name="Sprite2D" type="Sprite2D" parent="Items/Watermellon"]
position = Vector2(75, 71)
scale = Vector2(0.2, 0.2)
texture = ExtResource("10_ibn80")

[node name="Cake" type="Area2D" parent="Items"]
position = Vector2(885, 239)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Items/Cake"]
position = Vector2(75, 75)
shape = SubResource("RectangleShape2D_fp22t")

[node name="Box" type="Sprite2D" parent="Items/Cake/CollisionShape2D"]

[node name="Sprite2D" type="Sprite2D" parent="Items/Cake"]
position = Vector2(75, 60)
scale = Vector2(0.22, 0.22)
texture = ExtResource("11_5e2ug")

[node name="Tomato" type="Area2D" parent="Items"]
position = Vector2(1179, 239)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Items/Tomato"]
position = Vector2(75, 75)
shape = SubResource("RectangleShape2D_fp22t")

[node name="Box" type="Sprite2D" parent="Items/Tomato/CollisionShape2D"]

[node name="Sprite2D" type="Sprite2D" parent="Items/Tomato"]
position = Vector2(75, 71)
scale = Vector2(0.22, 0.22)
texture = ExtResource("12_psjat")

[node name="Muffin" type="Area2D" parent="Items"]
position = Vector2(1473, 239)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Items/Muffin"]
position = Vector2(75, 75)
shape = SubResource("RectangleShape2D_fp22t")

[node name="Box" type="Sprite2D" parent="Items/Muffin/CollisionShape2D"]

[node name="Sprite2D" type="Sprite2D" parent="Items/Muffin"]
position = Vector2(75, 71)
scale = Vector2(0.22, 0.22)
texture = ExtResource("13_hkpwe")

[node name="Ketchup" type="Area2D" parent="Items"]
position = Vector2(150, 414)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Items/Ketchup"]
position = Vector2(75, 75)
shape = SubResource("RectangleShape2D_fp22t")

[node name="Box" type="Sprite2D" parent="Items/Ketchup/CollisionShape2D"]

[node name="Sprite2D" type="Sprite2D" parent="Items/Ketchup"]
position = Vector2(75, 71)
scale = Vector2(0.23, 0.23)
texture = ExtResource("14_u75f0")

[node name="Bacon" type="Area2D" parent="Items"]
position = Vector2(444, 414)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Items/Bacon"]
position = Vector2(75, 75)
shape = SubResource("RectangleShape2D_fp22t")

[node name="Box" type="Sprite2D" parent="Items/Bacon/CollisionShape2D"]

[node name="Sprite2D" type="Sprite2D" parent="Items/Bacon"]
position = Vector2(83, 70)
scale = Vector2(0.3, 0.3)
texture = ExtResource("15_2vpjh")

[node name="Lemon" type="Area2D" parent="Items"]
position = Vector2(738, 414)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Items/Lemon"]
position = Vector2(75, 75)
shape = SubResource("RectangleShape2D_fp22t")

[node name="Box" type="Sprite2D" parent="Items/Lemon/CollisionShape2D"]

[node name="Sprite2D" type="Sprite2D" parent="Items/Lemon"]
position = Vector2(75, 77)
scale = Vector2(0.23, 0.23)
texture = ExtResource("16_ls7tg")

[node name="Carrot" type="Area2D" parent="Items"]
position = Vector2(1032, 414)

[node name="Sprite2D" type="Sprite2D" parent="Items/Carrot"]
modulate = Color(1, 0.819608, 0, 1)
position = Vector2(73, 67)
rotation = 0.789434
scale = Vector2(0.4, 0.4)
texture = ExtResource("17_d0fer")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Items/Carrot"]
position = Vector2(75, 75)
shape = SubResource("RectangleShape2D_fp22t")

[node name="Box" type="Sprite2D" parent="Items/Carrot/CollisionShape2D"]

[node name="Hotdog" type="Area2D" parent="Items"]
position = Vector2(1326, 414)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Items/Hotdog"]
position = Vector2(75, 75)
shape = SubResource("RectangleShape2D_fp22t")

[node name="Box" type="Sprite2D" parent="Items/Hotdog/CollisionShape2D"]

[node name="Sprite2D" type="Sprite2D" parent="Items/Hotdog"]
position = Vector2(81, 67)
scale = Vector2(0.32, 0.32)
texture = ExtResource("18_v38al")

[node name="Mustard" type="Area2D" parent="Items"]
position = Vector2(1620, 414)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Items/Mustard"]
position = Vector2(75, 75)
shape = SubResource("RectangleShape2D_fp22t")

[node name="Box" type="Sprite2D" parent="Items/Mustard/CollisionShape2D"]

[node name="Sprite2D" type="Sprite2D" parent="Items/Mustard"]
position = Vector2(75, 71)
scale = Vector2(0.23, 0.23)
texture = ExtResource("19_rpg03")

[node name="PlayerScores" type="Node2D" parent="."]

[node name="1" type="ColorRect" parent="PlayerScores"]
offset_left = 32.0
offset_top = 654.0
offset_right = 251.0
offset_bottom = 786.0
color = Color(0, 0.262745, 1, 1)

[node name="Icon1" type="Sprite2D" parent="PlayerScores/1"]
position = Vector2(66, 66)
scale = Vector2(0.33, 0.33)
texture = ExtResource("21_34sat")

[node name="Score1" type="Label" parent="PlayerScores/1"]
layout_mode = 0
offset_left = -164.0
offset_top = -197.0
offset_right = 506.0
offset_bottom = 324.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("3_axrgk")
theme_override_font_sizes/font_size = 60
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="2" type="ColorRect" parent="PlayerScores"]
offset_left = 286.0
offset_top = 654.0
offset_right = 505.0
offset_bottom = 786.0
color = Color(0.529412, 0.0862745, 0, 1)

[node name="Icon2" type="Sprite2D" parent="PlayerScores/2"]
position = Vector2(66, 66)
scale = Vector2(0.33, 0.33)
texture = ExtResource("21_34sat")

[node name="Score2" type="Label" parent="PlayerScores/2"]
layout_mode = 0
offset_left = -163.0
offset_top = -197.0
offset_right = 507.0
offset_bottom = 324.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("3_axrgk")
theme_override_font_sizes/font_size = 60
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="3" type="ColorRect" parent="PlayerScores"]
offset_left = 32.0
offset_top = 814.0
offset_right = 251.0
offset_bottom = 946.0
color = Color(0, 0.419608, 0.0745098, 1)

[node name="Icon3" type="Sprite2D" parent="PlayerScores/3"]
position = Vector2(66, 66)
scale = Vector2(0.33, 0.33)
texture = ExtResource("21_34sat")

[node name="Score3" type="Label" parent="PlayerScores/3"]
layout_mode = 0
offset_left = -164.0
offset_top = -196.0
offset_right = 506.0
offset_bottom = 325.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("3_axrgk")
theme_override_font_sizes/font_size = 60
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="4" type="ColorRect" parent="PlayerScores"]
offset_left = 286.0
offset_top = 814.0
offset_right = 505.0
offset_bottom = 946.0
color = Color(0.862745, 0.694118, 0.054902, 1)

[node name="Icon4" type="Sprite2D" parent="PlayerScores/4"]
position = Vector2(66, 66)
scale = Vector2(0.33, 0.33)
texture = ExtResource("21_34sat")

[node name="Score4" type="Label" parent="PlayerScores/4"]
layout_mode = 0
offset_left = -163.0
offset_top = -196.0
offset_right = 507.0
offset_bottom = 325.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("3_axrgk")
theme_override_font_sizes/font_size = 60
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Cursors" type="Node2D" parent="."]

[node name="Cursor1" parent="Cursors" instance=ExtResource("2_xrv4f")]
position = Vector2(743, 770)

[node name="Cursor2" parent="Cursors" instance=ExtResource("2_xrv4f")]
position = Vector2(893, 770)

[node name="Cursor3" parent="Cursors" instance=ExtResource("2_xrv4f")]
position = Vector2(1043, 770)

[node name="Cursor4" parent="Cursors" instance=ExtResource("2_xrv4f")]
position = Vector2(1193, 770)

[node name="Start" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
offset_top = 119.0
offset_right = 1920.0
offset_bottom = 640.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 40
theme_override_fonts/font = ExtResource("3_axrgk")
theme_override_font_sizes/font_size = 250
text = "Start!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Countdown" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Countdown" to="." method="_on_countdown_timeout"]

[editable path="Cursors/Cursor1"]
